Extended characters in PDF (#8556)
* extended character support

* Upgrade test to junit.jupiter and cleanup some of the code (#8557)

* Upgrade test to junit.jupiter and some code cleanup

* Fiks loading of font from main/resources

* minor code cleanup

* updated tests

* Sonarcloud code smells

* code readability

* code smell

* patch

* Changed testname to match the rest.

Co-authored-by: Vemund Gaukstad <tjololo@users.noreply.github.com>
Co-authored-by: tba76 <thomabak@gmail.com>